typescript/checker/tests/conformance/async/es6/asyncUseStrict_es6.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es6/asyncUseStrict_es6.ts
 --> $DIR/tests/conformance/async/es6/asyncUseStrict_es6.ts:5:1
  |
5 | / async function func(): Promise<void> {
6 | |     "use strict";
7 | |     var b = await p || a;
8 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            137,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/asyncUseStrict_es6.ts:5:22
  |
5 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

